--- a/templates/listing.html
+++ b/templates/listing.html
@@ -5,17 +5,17 @@
     <title>Purple Buzz - Contact Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="apple-touch-icon" href="static/img/apple-icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico">
     <!-- Load Require CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font CSS -->
-    <link href="assets/css/boxicon.min.css" rel="stylesheet">
+    <link href="static/css/boxicon.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- Load Tempalte CSS -->
-    <link rel="stylesheet" href="assets/css/templatemo.css">
+    <link rel="stylesheet" href="static/css/templatemo.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="static/css/custom.css">
 <!--
     
 TemplateMo 561 Purple Buzz
@@ -29,7 +29,7 @@ https://templatemo.com/tm-561-purple-buzz
     <!-- Header -->
     <nav id="main_nav" class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container d-flex justify-content-between align-items-center">
-            <a class="navbar-brand h1" href="index.html">
+            <a class="navbar-brand h1" href="/">
                 <i class='bx bx-buildings bx-sm text-dark'></i>
                 <span class="text-dark h4">Upgraders</span>
             </a>
@@ -41,19 +41,19 @@ https://templatemo.com/tm-561-purple-buzz
                 <div class="flex-fill mx-xl-5 mb-2">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-xl-5 text-center text-dark">
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="index.html">Home</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="graphiccard.html">Graphics Card</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="graphiccard">Graphics Card</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="marketplace.html">Marketplace</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="marketplace">Marketplace</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="about.html">About</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="contact.html">Contact</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -66,40 +66,9 @@ https://templatemo.com/tm-561-purple-buzz
     <!-- Close Header -->
 
 
-    <!-- Start Banner Hero -->
-    <section class="bg-light">
-        <div class="container py-4">
-            <div class="row align-items-center justify-content-between">
-                <div class="contact-header col-lg-4">
-                    <h1 class="h2 pb-3 text-primary">Thanks!</h1>
-                    <h3 class="h4 regular-400">Now For The Next Steps</h3>
-                    <p>
-                        Please prepare your part in a secure package and ship it to us
-                    </p>
-                    <p>
-                        *Send the part to 4400 University Dr, Fairfax, VA 22020 
-                    </p>
-                    <p>
-                        We'll reimburse you the shipping costs 
-                    </p>
-                    <p>
-                        Once verified, an extra 15% store credit of the sell price will be automatically added to your account!
-                    </p>
-                    <p style="font-size: 10px;">
-                        *Do not actually send your part, this website was built for a school project
-                    </p>
-                </div>
-                
-            </div>
-        </div>
-    </section>
-    <!-- End Banner Hero -->
+	<!-- Start Listing -->
 
-
-    <!-- Start Contact -->
-
-    <!-- End Contact -->
-
+	<!-- End Listing -->
 
     <!-- Start Footer -->
     <footer class="bg-secondary pt-4">
@@ -107,7 +76,7 @@ https://templatemo.com/tm-561-purple-buzz
             <div class="row py-4">
 
                 <div class="col-lg-4 col-12 align-left">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/">
                         <i class='bx bx-buildings bx-sm text-light'></i>
                         <span class="text-light h5">Upgraders</span>
                     </a>
@@ -138,19 +107,19 @@ https://templatemo.com/tm-561-purple-buzz
                     <h3 class="h4 pb-lg-3 text-light light-300">Our Company</h2>
                         <ul class="list-unstyled text-light light-300">
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="index.html">Home</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="/">Home</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="about.html">About Us</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="about">About Us</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="work.html">Work</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="work">Work</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="pricing.html">Price</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="pricing">Price</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="contact.html">Contact</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="contact">Contact</a>
                             </li>
                         </ul>
                 </div>
@@ -187,11 +156,11 @@ https://templatemo.com/tm-561-purple-buzz
 
 
     <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/bootstrap.bundle.min.js"></script>
     <!-- Templatemo -->
-    <script src="assets/js/templatemo.js"></script>
+    <script src="static/js/templatemo.js"></script>
     <!-- Custom -->
-    <script src="assets/js/custom.js"></script>
+    <script src="static/js/custom.js"></script>
 
 </body>
 
